--- a/src/components/Navbar.module.scss
+++ b/src/components/Navbar.module.scss
@@ -2,7 +2,11 @@
 
 nav {
   transition: $transition;
+  margin-left: 3.0vw;
+  margin-right: 3.0vw;
+  min-width: none;
 }
+
 
 .active {
   border-bottom: 5px solid;
