--- a/src/components/music-portfolio/OverlayedImage.css
+++ b/src/components/music-portfolio/OverlayedImage.css
@@ -2,10 +2,11 @@
 .image-container {
   position: relative;
   margin-top: 0.5rem;
-  margin-left: 5.0rem;
-  margin-right: 5.0rem;
+  margin-left: 3.0vw;
+  margin-right: 3.0vw;
   margin-bottom: 3.0rem;
-
+  width: 90vw;
+  justify-content: center;
 }
 
 .image {
@@ -30,21 +31,25 @@
   align-items: left;
   color: #ffffff;
   text-align: left;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: #1f1f1fb3;
+
 }
 
 
 .title {
   font-size: 4vw;
-  padding: 20px 40px;
+  padding: 2vw;
+  padding-bottom: 8px;
+  text-align: left;
 }
 
 .description {
   overflow: hidden;
   text-align: left;
-  font-size: 2.5vh;
+  font-size: 1.5rem;
   font-family: 'Roboto', Helvetica, sans-serif;
-  padding: 10px 40px 40px 40px;
+  padding: 2.0vw;
+  padding-top: 8px;
 }
 
 @media (max-width: 1200px) {
@@ -54,13 +59,12 @@
   }
 
   .image {
-    border-radius: 15px 15px 0px 0px;
+    border-radius: 16px 16px 16px 16px;
   }
 
   .overlay {
     position: relative;
-    background-color: rgba(13, 19, 47, 0.85);
-    border-radius: 0px 0px 15px 15px;
+    border-radius: 15px;
   }
 
   .title {
