fix remaining padding issues for mobile

--- a/src/components/music-portfolio/YouTubeEmbed.css
+++ b/src/components/music-portfolio/YouTubeEmbed.css
@@ -3,6 +3,7 @@
     padding: 56.25%;
     position: relative;
     height: 0;
+    justify-content: flex-start;
   }
   
   .video-responsive iframe {
