improve navbar scaling

--- a/src/components/Navbar.module.scss
+++ b/src/components/Navbar.module.scss
@@ -2,8 +2,8 @@
 
 nav {
   transition: $transition;
-  margin-left: 3.0vw;
-  margin-right: 3.0vw;
+  margin-left: 32px;
+  margin-right: 32px;
   min-width: none;
 }
 
